A few fixes to overflows and the table of contents

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -187,7 +187,7 @@
   display: flex;
   align-items: center;
   padding: 0;
-  min-height: 23px;
+  /* min-height: 23px; */
 }
 
 .notion-page-cover-wrapper,
